@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Add function ResetStart to the video output module.
     Add function SetClosing to the video output module.
     Generalize GetVaapiContext to GetHwAccelContext.
     Add compile time configurable trickspeed packets dump.
